--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="@android:color/white"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/btn8"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_num8"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
@@ -22,19 +28,29 @@
         android:id="@+id/btn9"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_num9"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toTopOf="@+id/guideline10"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/guideline10" />
 
     <Button
         android:id="@+id/btnComa"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_Coma"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
@@ -47,6 +63,12 @@
         android:id="@+id/btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_num2"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
@@ -58,6 +80,12 @@
         android:id="@+id/btnCE"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_numCE"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
@@ -69,6 +97,12 @@
         android:id="@+id/btnIgual"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_Igual"
         android:textSize="36sp"
@@ -81,12 +115,12 @@
         android:id="@+id/btn1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_num1"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
@@ -98,6 +132,12 @@
         android:id="@+id/btn3"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_num3"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
@@ -109,6 +149,12 @@
         android:id="@+id/btn5"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_num5"
         app:layout_constraintBottom_toTopOf="@+id/guideline10"
@@ -120,6 +166,12 @@
         android:id="@+id/btn6"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_num6"
         app:layout_constraintBottom_toTopOf="@+id/guideline10"
@@ -131,6 +183,12 @@
         android:id="@+id/btn7"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_num7"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
@@ -142,6 +200,12 @@
         android:id="@+id/btnDEL"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_DEL"
         app:layout_constraintBottom_toTopOf="@+id/guideline10"
@@ -153,6 +217,12 @@
         android:id="@+id/btn4"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_num4"
         app:layout_constraintBottom_toTopOf="@+id/guideline10"
@@ -164,6 +234,12 @@
         android:id="@+id/btn0"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_num0"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
@@ -175,6 +251,12 @@
         android:id="@+id/btnDollar"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_Dollar"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
@@ -186,6 +268,12 @@
         android:id="@+id/btnYen"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_Yen"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
@@ -198,6 +286,12 @@
         android:id="@+id/btnYuan"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_Yuan"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
@@ -209,6 +303,12 @@
         android:id="@+id/btnLibra"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@android:color/darker_gray"
         android:text="@string/_Libra"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
@@ -221,7 +321,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="103dp" />
+        app:layout_constraintGuide_percent="0.25304136" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -268,7 +368,7 @@
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@android:color/white"
-
+        android:background="@android:color/black"
         android:drawableBottom="@android:color/darker_gray"
         app:fontFamily="sans-serif-medium"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
@@ -287,7 +387,7 @@
         android:text="@string/_num0"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textSize="24sp"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:gravity="fill_vertical"
         app:layout_constraintBottom_toTopOf="@+id/guideline6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -304,7 +404,7 @@
         android:layout_marginRight="8dp"
         android:text="@string/_num0"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="24sp"
         android:gravity="fill_vertical"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
